samples/_failures_safe/1761270286_b52340_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f0413998.c: In function ‘main’:
./samples/SAFE/__tmp_f0413998.c:150:48: error: expected ‘]’ at end of input
  150 |         execute_operation(operations[choice - 1
      |                                                ^
      |                                                ]
./samples/SAFE/__tmp_f0413998.c:150:9: error: too few arguments to function ‘execute_operation’
  150 |         execute_operation(operations[choice - 1
      |         ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f0413998.c:85:6: note: declared here
   85 | void execute_operation(MatrixOp op, int rows, int cols, int matrix[rows][cols]) {
      |      ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f0413998.c:150:9: error: expected declaration or statement at end of input
  150 |         execute_operation(operations[choice - 1
      |         ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f0413998.c:150:9: error: expected declaration or statement at end of input
